compat: JDK 8 语法兼容
- 将 maven.compiler.source/target 从 17 降至 1.8
- 替换 String.isBlank() 为 trim().isEmpty() 判断
- 替换 List.of() 为 Collections.emptyList()
- 替换 Files.readString/writeString 为 JDK 8 兼容的 IO 操作
- 替换 String.lines() 为自定义 lines() 辅助方法

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>